# cctide

./: .gitignore  CLAUDE.md  DISCLAIMER.md  LICENSE  README.md  deny.toml  index.html  models.json  package-lock.json  package.json
.claude/: settings.json
.claude/commands/: cc-review.md  cc-security.md  cctide-ci.md  cctide-review.md  cctide-version.md  ci-check.md  test-coverage.md  version.md
.claude/skills/: cctide-tests.md
.github/: SECURITY.md  dependabot.yml
.github/workflows/: lint.yml  release.yml  security.yml
scripts/: gen-icon.mjs
src/: main.ts  project-filter.test.ts  project-filter.ts  styles.css  tab-analytics.ts  tab-extras.ts  tab-sessions.ts  tab-settings.ts  tab-usage.ts  types.ts  update.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  context.rs  icon.rs  lib.rs  main.rs  memory.rs  models.rs  notify.rs  outcome.rs  rtk.rs  scan.rs  state.rs  tick.rs  update_svc.rs  usage.rs
